      prevent expiration time (exp) JWT claims that are too far ahead of the
      current time. Intended to prevent DoS attacks against JWT assertion
      consumers that utilise a store to prevent JWT replay.
    * The default expiration time (exp) claim in JWTAuthenticationClaimsSet the
      constructor is reduced from 5 to 1 minute from the current system time.

version 11.5 (2023-10-23)
    * Adds a DefaultEntityStatementRetriever constructor to support custom
      HTTPRequestSender instances.
    * Moves the HTTPRequest.getConnectTimeout and getReadTimeout methods to the
      ReadOnlyHTTPRequest interface.

version 11.6 (2023-11-05)
    * HTTPMessage.getBodyAsJSONObject, getBodyAsJSONArray and getBodyAsJWT must
      accept appropriate sub-type suffixes (iss #443).
    * Adds ContentTypeUtils.ensureContentType method with sub-type suffix
      support.
    * Removes deprecated comma separator support in Scope.parse (iss #445).
    * Deprecates RPMetadataPolicyFactory.
    * Upgrades to com.nimbusds:content-type:2.3
    * Updates com.nimbusds:nimbus-jose-jwt:9.37
    * Updates to BouncyCastle 1.76 (1.8 on).
    * Updates to optional SAML dep org.apache.santuario:xmlsec:2.3.4
    * Updates to optional SAML dep com.google.guava:guava:32.0.1-jre

version 11.7 (2023-11-27)
    * Adds a ParameterRequirement enumeration.
    * The GrantType adds a method returning the scope parameter requirement in
      token requests.
    * TokenRequest.toHTTPRequest must not include a scope parameter with an
      authorisation code grant or other OAuth 2.0 grants that don't allow it
      (iss #450).
    * TokenRequest.parse must reject requests with a scope parameter that isn't
      allowed according to the grant type with an invalid_request error (iss
      #450).

version 11.7.1 (2023-12-08)
    * Updates to net.minidev:json-smart:2.5.0
    * Updates com.nimbusds:nimbus-jose-jwt:9.37.3
    * Updates to com.google.crypto.tink:tink:1.12.0
    * Updates to BouncyCastle 1.77